--- a/config_data.yml
+++ b/config_data.yml
@@ -45,7 +45,7 @@ inputs:
       SERIES: 'Series'
       REF_AREA|RW: ''
     drop_dimensions: SOURCE_DETAIL
-    dsd: 'RWA_C_V2_SDG DSD.xml'
+    dsd: 'AFG_C_V2_SDG DSD.xml'
     import_translation_keys: true
   - class: InputYamlMdMeta
     # This describes the meta files, relative to the "src_dir" indicated above.
@@ -79,7 +79,7 @@ translations:
     source: translations
   # This pulls in translations from DSD
   - class: TranslationInputSdmx
-    source: 'RWA_C_V2_SDG DSD.xml'
+    source: 'AFG_C_V2_SDG DSD.xml'
     
     
 # Reporting status extra fields
